examples/test_package/Double_dc_full/steps/benchrps___rough_run4/#test_analysis_2_result.txt
### Rock-Paper-Scissors ProbLog Code Evaluation Report

---

#### **1. Document Title**  
Evaluation of Rock-Paper-Scissors ProbLog Implementation  

---

#### **2. Background and Purpose**  
The provided ProbLog code defines the rules of the rock-paper-scissors game and implements a function to determine the winner of a series of moves. The purpose of this evaluation is to verify the correctness of the implementation, analyze test results, and ensure compliance with ProbLog syntax and semantics.

---

#### **3. Test Results Summary**  
The test query `determine_winner([rock,rock,rock],[paper,paper,scissor],W)` resulted in an error:  
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 15:62.
```

**Failed Query:**  
- `determine_winner([rock,rock,rock],[paper,paper,scissor],W)`  
  - **Expected Result:** The winner should be determined based on the moves.  
  - **Actual Result:** Error due to an undefined clause for `->/2`.

---

#### **4. Failure Localization**  
The error occurs in the `play_round` predicate, specifically at the line:  
```prolog
play_round(P1Move, P2Move, Result) :- (beats(P1Move, P2Move) -> Result = win ; (beats(P2Move, P1Move) -> Result = lose ; Result = draw).
```
- **Issue:** The `->/2` operator is not correctly interpreted in the ProbLog context.  
- **Line Number:** The error points to line 15, column 62.

---

#### **5. Root Cause Analysis**  
- **Logical Correctness:**  
  - The `play_round` predicate uses nested `->/2` operators, which are not supported in ProbLog as they are in classical Prolog.  
  - The recursive termination in `play/3` and `compute_score/2` is correct, but the error prevents execution.  

- **Probabilistic Context:**  
  - No probabilistic facts or rules are used in this implementation, so probabilistic correctness is not applicable here.  

- **DeepProbLog Integration:**  
  - **Report:** "DeepProbLog feature not used."  

---

#### **6. Overall Analysis**  
- **Functional Requirements:**  
  - **Classical Reasoning:** Partially met. The game rules are correctly defined, but the implementation fails due to syntax issues.  
  - **Probabilistic Reasoning:** Not applicable.  
  - **Neural Network Integration:** Not used.  

- **Edge Cases:**  
  - Non-list inputs are not handled.  
  - Deep recursion is not a concern here due to the small input size.  

---

#### **7. Error Summary**  

| No. | Problem                          | Impact                          | Suggestion                                                                 |
|-----|----------------------------------|---------------------------------|----------------------------------------------------------------------------|
| 1   | Undefined `->/2` operator        | Prevents execution of the query | Replace nested `->/2` with `if-then-else` or separate clauses for clarity. |
| 2   | No handling of non-list inputs   | Potential runtime errors        | Add input validation for lists.                                            |

---

#### **8. Suggested Fix**  
Replace the `play_round` predicate with the following:  
```prolog
play_round(P1Move, P2Move, win) :- beats(P1Move, P2Move).
play_round(P1Move, P2Move, lose) :- beats(P2Move, P1Move).
play_round(_, _, draw).
```

This avoids the problematic `->/2` operator and adheres to ProbLog syntax.

---

**Word Count:** ~400 words.  

--- 

This report provides a clear analysis of the issues and suggests actionable fixes to improve the implementation.